fix(a11y): AAA contrast and hover color on navbar buttons

--- a/presets/default.css
+++ b/presets/default.css
@@ -1,9 +1,9 @@
 :root {
-  --primary-color: #105d6c;
+  --primary-color: #0C5D6A;
   --secondary-color-1: #d8604c;
   --secondary-color-2: #d78958;
   --neutral-color: #4e5056;
-  --neutral-soft-color: #87898e; /*#b0b1b3;*/
+  --neutral-soft-color: #57575C; /*#b0b1b3;*/
   --neutral-light-color: #f2f2f2;
   --main-text-fontsize: 17px;
   --main-text-fontfamily: "Nunito", sans-serif;
